# ale-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: commit-check.yml  ruff.yml
ale/agents/: __init__.py  resume.py
ale/core/: config.py
ale/repository/: bigquery.py
ale/services/: chat.py
ale/tools/: resume.py  utils.py
app/core/: config.py
app/models/: resume.py  utils.py
app/repository/: bigquery.py
app/services/: chat.py
app/services/agents/: __init__.py  resume.py
app/services/tools/: __init__.py  resume.py
data/: resume_sample.json
tests/agents/: langsmith.py  test_extract_content.py
tests/data/: extract_content.json
tests/unittest/models/: test_utils.py
