[project]
name = "ale-assistant"
version = "0.0.1"
description = "My personal assistant - called Ale"
authors = [
    {name = "syahrulhamdani"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
